  a FlowExecution.start (after becoming active but before having the current state set).
* Added various not null asserts to setters allowing overriding of required flow execution repository services.
* Changed ContinuationFlowExecutionRepositoryCreator's default 'maxContinuations' property to 0, setting 
  no upper bound on the number of continuations that can exist per conversation by default.

Package org.springframework.webflow.executor
* Refined support for context-relative external redirects; now by default external URLs that begin with 
  a leading '/' are treated as context-relative.  The FlowExecutorArgumentExtractor.redirectContextRelative
  property allows for overriding this default.
* Fixed bug in RequestPathFlowExecutorArgumentExtractor.createFlowUrl where flow redirect input 
  was not being appended to the redirect URL correctly.
* Fixed bug where JSFPhaseListener was resetting the UIViewRoot even if the view did not change as 
  part of a resubmission.
* Added support for populating the FlowExecution inputMap from ExternalContext attributes during a launch operation.
  This allows for a flow to be passed input from clients that start it, and subsequently
  map the input into its local scope using a input-mapper.
* Portlet flow controller now refreshes a conversation's current flow execution on render 
  request if necessary, to support browser refresh.
* Portlet flow controller can now perform external redirects using ActionResponse.sendRedirect(url).

Package org.springframework.webflow.registry
* Improved ExternalizedFlowRegistrar, extracting a factory method for creating an ExternalizedFlowDefinition
  from a valid Resource location, and a template method for calculating if the location is actually a flow resource.
* Fixed a bug in AbstractFlowRegistryFactoryBean where a NPE would occur when configuring custom DefaultFlowServiceLocator services.